--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gpt3",
+  "name": "web-kotipalvelu",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
