--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^4.0.3",
+    "react-scroll-parallax": "^3.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
