--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.4.2",
+    "recharts": "^2.9.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
