--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.4.2",
     "recharts": "^2.9.2",
+    "redux": "^4.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
